--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.5rem;
   font-family: "Bebas Neue", sans-serif;
   font-family: "Gajraj One", cursive;
   margin-bottom: 0;
@@ -25,7 +25,7 @@ div {
   background-color: #f2e205;
   direction: rtl;
   unicode-bidi: bidi-override;
-  line-height: 2em;
+  line-height: 1.8rem;
   margin-top: 1%;
 }
 
